# SQLPlayground

./: README.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: gh-pages.yml
public/: articles.csv  comments.csv  timezones.csv  users.csv
scripts/: generate_random_data.py
src/app/: globals.scss  layout.tsx  page.module.scss  page.tsx
src/components/: Table.module.scss  Table.tsx
src/features/: csvToSql.ts
src/types/: csv.ts
